# dagster-for-dooblies

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
.dagster/: dagster.yaml  workspace.yaml
is_this_thing_shit/: __init__.py  main.py
m0/: run.py
m1a/: run.py
m1b/: run.py
m1c/: run.py
m1d/: run.py
m1e/: run.py
m1f/: run.py
m2/: run.py
terraform/: .terraform.lock.hcl  main.tf
tests/: test_dagster_for_dooblies.py
